--- a/source/_posts/2025-02-14-去谷歌化路漫漫（一）：Proton和电子邮件.md
+++ b/source/_posts/2025-02-14-去谷歌化路漫漫（一）：Proton和电子邮件.md
@@ -18,34 +18,62 @@ img:
 ---
 
 
-- [这篇文章将会很长，去谷歌化的路程是我对所见种种感受改变，对自己十几年互联网生活反思、改进，有失有得的过程。每一期我都会聊一些产品，以及我个人的体验，不客观不真实，仅供参考。今天先讲去谷歌化中的谷歌：Proton。]
--
-- 2024年底，我开始去谷歌化了。
-- 原因和大多数用户的追求隐私/支持自由软件不同，我只是想要一个简洁的互联网生活。
-- 希望我的邮件客户端不要再讨好我，从大数据中预测这一封放进社交媒体还是收件箱; 希望每次登录账户时输入密码和2步验证代码就能成功登录，不必拿出另一部设备进行一番操作; 希望在使用YouTube/B站时，我能选择自己想要的客户端，而不是把一切都寄托在谷歌/叔叔恩赐一般的优化; 希望我的密码可以跟着我的人走，而不是被绑在Chrome里; 希望讨厌的广告，不要总是霸占搜索引擎的前排; 希望我的账户信息，不会因为我少加了一个密保邮箱和手机号，就面临着随时把自己锁在外面的风险……
-- 当我刷着Reddit，r/deGoogling这个版块出现在眼前，我一下子就明白了它的意思: 是的，这就是我一直想要的!
-- ……吗?
-- 似乎不是。
-- 论坛里的大家，兴致勃勃地讨论着谷歌套件的替代品，让我感到很受鼓舞。在欧美地区去谷歌化堪称“逆天而行”，离开了谷歌的便利工具，许多人甚至感到一夜变成了原始人。作为手足无措的用户中的一员，我开始从101看起。
-- 去谷第一剑，先斩gmail。而热度最高的gmail，以至于谷歌套件的替代品，就是Proton。
-- Protonmail，这是一个我在2020年就听说的名字。“端到端加密”“尊重隐私”的邮件，它几乎凭借一己之力，将这原本小众的需求成功带进了大众的视野。从前的Proton只有邮件服务，而如今却大有要做成隐私友好的网络服务提供商中的Google的意思：VPN，密码管理器，邮件，云盘，日历，还有24年底面向Visionary用户（一种类似于给Proton进行了风投的顶级订阅用户，这些用户不仅能获得所有产品的最高级权益，还能保证享受以后的所有升级。当然订阅费很贵，并且根据reddit用户回忆，这种订阅只在Proton初创和24年黑五后开始强推Wallet的时间段开放过）进行了加密货币钱包的内测。
-- 然而，这个提供商却让我感到比Google还令人无所适从。
-- 打开[它的网站](https://proton.me)，紫与蓝的配色十分醒目，居中衬线体的标语是“A better internet starts with privacy and freedom（更好的互联网从隐私和自由开始）”，并在首页展示了Proton的各项业务与最新的促销信息。不得不说，Proton的UI进步不小，从2020年初以一把锁为Logo，灰扑扑的朴素模样，到如今大方优雅、细致入微的紫色系平面设计，像是在向互联网昭示这个新兴的企业已经完成了从丑小鸭到白天鹅的蜕变。
-- 作为一个穷鬼，我首先做的就是点开定价一项项察看。在2024年11月，Proton各项服务的定价（根据我的回忆，此处我会找到互联网档案的资料补上）是这样的：各项服务的基础功能免费，各自的会员定价不同。邮件服务Mail Plus是4.99USD/mo，年付八折；第二大业务VPN的Plus是9.99USD/mo，两年付五折；密码管理器Pass Plus是2.99USD/mo，年付价格为1.99USD/mo（Pass与邮箱别名服务SimpleLogin两项业务的会员在早些时候是分开的，分别定价2.99USD/mo。24年底完成了Pass Plus和SimpleLogin Premium的合并，合并后提价至3.99USD/mo，年付七五折）；云盘Drive 200GB的空间需要收取4.99USD/mo，年付八折。
-- 这定价不能算贵，但也不算便宜。在欣赏完这些对隐私大有助益的服务之后，我不禁汗流浃背：这样子一项一项加起来，一个月的花费接近30刀。当然，实际上不需要这么多，因为——
-- Proton将每一项服务的单价抬高，最终的目的就是吸引用户把目光投向中间高亮的、用紫色框框围起来的选项——Proton Unlimited，月付12.99USD——当然，这不重要——年付9.99USD/mo。此时，刚刚在心中算了一笔账的用户就会发现：哎，这个划算！
-- 不仅如此，Proton在购买页面从未告知客户：当用户购买了一项服务的Plus之后，便不能在同一个Proton账户上叠加其他服务的Plus。也就是说，“我只买Mail Plus和Pass Plus/SimpleLogin就够了”的想法是根本不可能实现的，在一项服务的Plus之上，只有直接购买Proton Unlimited的选项。而且，由于月付与年付的价格差异，Proton吸引客户更多地购买Unlimited的年付套餐。
-- 然而，根据互联网上用户的反馈和我个人的经验来看，这种捆绑定价的策略让顾客并不满意：不少人抱怨Proton涉足云盘、密码管理器的领域，而首推的邮箱服务和VPN却并没有进行多少优化，多而不精。
-- 我也忍不住想，如果去谷歌化的过程就是从一个公司跳到另一个公司，相信它对安全和隐私的承诺，并且每个月掏出9.99刀给它，相信这样就能买到安心，那么为什么不直接相信谷歌呢？
-- 当然，我们有证据说明谷歌对用户的隐私不够尊重，而Proton做得远比谷歌好；但是，这样足够吗？
-- 就拿邮箱来说，Proton为了保证E2EE（端到端加密，只有收信人和发信人能够解密信息），取消了对邮件行业标准IMAP/SMTP的支持，而后又顶不住客户的需求和自己的客户端实在太难用的事实，重新在桌面端加入了Bridge。这种打折腿给根拐的行为两面不讨好，对于真正需要隐私的客户而言，他们大可以去选择OpenPGP加密和Signal聊天软件这些更加成熟且广为接受的产品，而对于普通的客户而言，他们只是想用熟悉方便的客户端收发邮件，都要为此付出一笔月费，而且在移动端，Proton至今没有对第三方邮件客户端的支持。
-- 至于Proton此举对E2EE的实现效果，我只能说：**如有**。
-- 如果与Proton用户通信的对象位于另一个邮件服务器，那通信对象的邮件提供商一样能够阅读他们之间通信的内容。为了保障同外部联系人的通信也是E2EE，需要提前设置一个密码，对方收到邮件后，需要输入密码才能阅读。问题在于，OpenPGP就在那里，既有Thunderbird和eM Client的原生支持，又有Mailvelope这样的浏览器插件，在电子邮件中实现加密通信早就不是什么新鲜事，Proton此举无异于画蛇添足。Proton的一个主要营销点是总部位于瑞士，然而“瑞士的隐私法律”管辖住的也只有Proton保留与分享你的信息的权力。正如我刚才所说，你的邮件来自互联网各处，发向互联网各处。即使谷歌，或者说以GAFAM为首的数据矿工不再能够收集你收件箱中的信息，但你还是把真实的邮箱地址暴露在各种零售商的mailing list中，那么收集这些公开的信息一样可以拼凑出你的用户画像。
-- 当然，我也有不少Proton的好话要说：除了云盘实在没得夸，邮件也不符合我心中的评价标准，Pass和VPN我还是颇为欣赏的。Pass和SimpleLogin别名互通、会员合并之后，已经成为了我心目中Bitwarden之下第一密码管理器（KeePass论外，从灵活性/自建成本来说它应该是断层第一，但是KeePass的好用程度取决于客户端，用户体验上限高、下限低，参差不齐），开源的客户端、方便的导入与导出、独步天下的别名生成与管理，基础功能如附件、分类模板、密码生成和密码口令生成、2FA代码储存和填写，除了无法自建和云端优先这两个小小缺憾，可称得上是该有的都有，后来居上，大有压1Password一头之势。VPN功能丰富，体验稳定，直连也不会捶胸顿足，IP比较脏，但也是在所难免。
-- 当时的我只是想找一个适合穷鬼、可以用IMAP/SMTP并且看起来不像随时要跑路的提供商，当然，如果不是大公司的产品，我会更乐意。找来找去，目光锁定了mailbox.org和posteo.de，这两家各有优劣，起价都便宜，前者的优势是有域名邮箱支持，后者定价是PAYG的模式，并且用户忘记按时付款只会暂停发信功能，不会暂停收信功能（我说这个不是教唆网友去薅羊毛，只是说假如我被车撞了在医院里躺了半年，不会因为错过缴费而失去这半年里发到我的地址的重要邮件）。后来用了一会，两家我都不太满意，mailbox的网页从我这里加载实在是太慢了，符合对德国网络的刻板印象；posteo是因为最后我还是更想用域名邮箱一点，但是他们家出于隐私保护不希望保存用户的域名信息。
-- 之所以最后还是用上了域名邮箱，是因为频繁地注册各类账号的我很需要一个别名服务，买不起SimpleLogin和Addy.io，琢磨自建的时候突然发现：不对啊，自建肯定需要一个域名，这整个域名都是我的，我还在这里装模作样地enable和disable做什么，直接开个catch-all，遇到垃圾就block，岂不美哉！而且，未来SimpleLogin或其它别名服务的域名可能为他人注册，或者挪作他用，但是只要我一直续费域名，域名就一直属于我，便宜又可靠。
-- 所以我最后靠上的邮箱解决方案是几个主要域名不开catch-all，几个次要域名开catch-all接收垃圾邮件（不发送的话直接用Cloudflare路由），买的是MXRoute家的不按邮箱个数计费只按容量计费的邮件托管服务，一年下来的域名钱和邮箱钱加起来只要15刀，花五分之一的钱享受比Mail Plus+SimpleLogin更自由的服务（这个数字还能腰斩，明年要放生一个.cc域名）。
-- 当然这个时候就有人要问了，有什么坏处吗？如有吧，比如MXRoute的老板不在瑞士，我的域名registrar也不在瑞士，Cloudflare也不在瑞士，但是我是穷鬼，穷鬼是不会追求这个的，反正本站也不在瑞士（本站的主机托管在风景不知道怎么样反正站长没去过的德国纽伦堡）……
-- 说完了服务端，该说客户端了。我没有试过所有风评“值得一试”的客户端，比如Claw Mail，我的体验很浅，仅仅是从Fedora换到Arch的时候试了一下，后来发现还是Thunderbird比较得劲。Thunderbird是一个成熟、面面俱到的开源客户端，赖舒服了就不想走，最大的特色大概是自动发现收发信服务器，安卓端的FairEmail用的也是tb的检索功能。不习惯Thunderbird，想要更简洁一点的Linux桌面用户可以尝试一下Evolution。FairEmail是我心目中的安卓最佳，尽管UI褒贬不一，但是功能肯定是最多的，对于默认不加载外部图像的邮件排版得非常好，一目了然，其他客户端往往都需要加载出图片才能看出邮件的内容。K-9无功无过，被Thunderbird合并后表现更加亮眼。eM Client，还没有试过。最近买了NameCrane的三年套餐，SmarterMail为每个顶级域送3个license，过段时间会试试看。
-- 至于各大邮件厂商自己的应用，网易邮箱大师的桌面端和移动端都一般般，校园邮薅的永久vip去广告版尚可一用，但是Thunderbird和FairEmail珠玉在前，只能说是食之无用，弃之可惜。QQ和foxmail也是一样。Tuta的邮件客户端倒是没有广告，不过搜索功能很垃圾，也不能导入/导出。
-- 未完待续，本期水完邮箱，下期水一下密码管理软件吧。
+ 这篇文章将会很长，去谷歌化的路程是我对所见种种感受改变，对自己十几年互联网生活反思、改进，有失有得的过程。每一期我都会聊一些产品，以及我个人的体验，不客观不真实，仅供参考。今天先讲去谷歌化中的谷歌：Proton。
+ 
+ 2024年底，我开始去谷歌化了。
+ 
+ 原因和大多数用户的追求隐私/支持自由软件不同，我只是想要一个简洁的互联网生活。
+
+ 希望我的邮件客户端不要再讨好我，从大数据中预测这一封放进社交媒体还是收件箱; 希望每次登录账户时输入密码和2步验证代码就能成功登录，不必拿出另一部设备进行一番操作; 希望在使用YouTube/B站时，我能选择自己想要的客户端，而不是把一切都寄托在谷歌/叔叔恩赐一般的优化; 希望我的密码可以跟着我的人走，而不是被绑在Chrome里; 希望讨厌的广告，不要总是霸占搜索引擎的前排; 希望我的账户信息，不会因为我少加了一个密保邮箱和手机号，就面临着随时把自己锁在外面的风险……
+
+ 当我刷着Reddit，r/deGoogling这个版块出现在眼前，我一下子就明白了它的意思: 是的，这就是我一直想要的!
+
+  ……吗?
+  
+ 似乎不是。
+ 
+ 论坛里的大家，兴致勃勃地讨论着谷歌套件的替代品，让我感到很受鼓舞。在欧美地区去谷歌化堪称“逆天而行”，离开了谷歌的便利工具，许多人甚至感到一夜变成了原始人。作为手足无措的用户中的一员，我开始从101看起。
+ 
+ 去谷第一剑，先斩gmail。而热度最高的gmail，以至于谷歌套件的替代品，就是Proton。
+ 
+ Protonmail，这是一个我在2020年就听说的名字。“端到端加密”“尊重隐私”的邮件，它几乎凭借一己之力，将这原本小众的需求成功带进了大众的视野。从前的Proton只有邮件服务，而如今却大有要做成隐私友好的网络服务提供商中的Google的意思：VPN，密码管理器，邮件，云盘，日历，还有24年底面向Visionary用户（一种类似于给Proton进行了风投的顶级订阅用户，这些用户不仅能获得所有产品的最高级权益，还能保证享受以后的所有升级。当然订阅费很贵，并且根据reddit用户回忆，这种订阅只在Proton初创和24年黑五后开始强推Wallet的时间段开放过）进行了加密货币钱包的内测。
+
+ 然而，这个提供商却让我感到比Google还令人无所适从。
+ 
+ 打开[它的网站](https://proton.me)，紫与蓝的配色十分醒目，居中衬线体的标语是“A better internet starts with privacy and freedom（更好的互联网从隐私和自由开始）”，并在首页展示了Proton的各项业务与最新的促销信息。不得不说，Proton的UI进步不小，从2020年初以一把锁为Logo，灰扑扑的朴素模样，到如今大方优雅、细致入微的紫色系平面设计，像是在向互联网昭示这个新兴的企业已经完成了从丑小鸭到白天鹅的蜕变。
+
+ 作为一个穷鬼，我首先做的就是点开定价一项项察看。在2024年11月，Proton各项服务的定价（根据我的回忆，此处我会找到互联网档案的资料补上）是这样的：各项服务的基础功能免费，各自的会员定价不同。邮件服务Mail Plus是4.99USD/mo，年付八折；第二大业务VPN的Plus是9.99USD/mo，两年付五折；密码管理器Pass Plus是2.99USD/mo，年付价格为1.99USD/mo（Pass与邮箱别名服务SimpleLogin两项业务的会员在早些时候是分开的，分别定价2.99USD/mo。24年底完成了Pass Plus和SimpleLogin Premium的合并，合并后提价至3.99USD/mo，年付七五折）；云盘Drive 200GB的空间需要收取4.99USD/mo，年付八折。
+
+ 这定价不能算贵，但也不算便宜。在欣赏完这些对隐私大有助益的服务之后，我不禁汗流浃背：这样子一项一项加起来，一个月的花费接近30刀。当然，实际上不需要这么多，因为——
+
+ Proton将每一项服务的单价抬高，最终的目的就是吸引用户把目光投向中间高亮的、用紫色框框围起来的选项——Proton Unlimited，月付12.99USD——当然，这不重要——年付9.99USD/mo。此时，刚刚在心中算了一笔账的用户就会发现：哎，这个划算！
+
+ 不仅如此，Proton在购买页面从未告知客户：当用户购买了一项服务的Plus之后，便不能在同一个Proton账户上叠加其他服务的Plus。也就是说，“我只买Mail Plus和Pass Plus/SimpleLogin就够了”的想法是根本不可能实现的，在一项服务的Plus之上，只有直接购买Proton Unlimited的选项。而且，由于月付与年付的价格差异，Proton吸引客户更多地购买Unlimited的年付套餐。
+ 
+ 然而，根据互联网上用户的反馈和我个人的经验来看，这种捆绑定价的策略让顾客并不满意：不少人抱怨Proton涉足云盘、密码管理器的领域，而首推的邮箱服务和VPN却并没有进行多少优化，多而不精。
+ 
+ 我也忍不住想，如果去谷歌化的过程就是从一个公司跳到另一个公司，相信它对安全和隐私的承诺，并且每个月掏出9.99刀给它，相信这样就能买到安心，那么为什么不直接相信谷歌呢？
+
+ 当然，我们有证据说明谷歌对用户的隐私不够尊重，而Proton做得远比谷歌好；但是，这样足够吗？
+ 
+ 就拿邮箱来说，Proton为了保证E2EE（端到端加密，只有收信人和发信人能够解密信息），取消了对邮件行业标准IMAP/SMTP的支持，而后又顶不住客户的需求和自己的客户端实在太难用的事实，重新在桌面端加入了Bridge。这种打折腿给根拐的行为两面不讨好，对于真正需要隐私的客户而言，他们大可以去选择OpenPGP加密和Signal聊天软件这些更加成熟且广为接受的产品，而对于普通的客户而言，他们只是想用熟悉方便的客户端收发邮件，都要为此付出一笔月费，而且在移动端，Proton至今没有对第三方邮件客户端的支持。
+
+ 至于Proton此举对E2EE的实现效果，我只能说：**如有**。
+ 
+ 如果与Proton用户通信的对象位于另一个邮件服务器，那通信对象的邮件提供商一样能够阅读他们之间通信的内容。为了保障同外部联系人的通信也是E2EE，需要提前设置一个密码，对方收到邮件后，需要输入密码才能阅读。问题在于，OpenPGP就在那里，既有Thunderbird和eM Client的原生支持，又有Mailvelope这样的浏览器插件，在电子邮件中实现加密通信早就不是什么新鲜事，Proton此举无异于画蛇添足。Proton的一个主要营销点是总部位于瑞士，然而“瑞士的隐私法律”管辖住的也只有Proton保留与分享你的信息的权力。正如我刚才所说，你的邮件来自互联网各处，发向互联网各处。即使谷歌，或者说以GAFAM为首的数据矿工不再能够收集你收件箱中的信息，但你还是把真实的邮箱地址暴露在各种零售商的mailing list中，那么收集这些公开的信息一样可以拼凑出你的用户画像。
+ 
+ 当然，我也有不少Proton的好话要说：除了云盘实在没得夸，邮件也不符合我心中的评价标准，Pass和VPN我还是颇为欣赏的。Pass和SimpleLogin别名互通、会员合并之后，已经成为了我心目中Bitwarden之下第一密码管理器（KeePass论外，从灵活性/自建成本来说它应该是断层第一，但是KeePass的好用程度取决于客户端，用户体验上限高、下限低，参差不齐），开源的客户端、方便的导入与导出、独步天下的别名生成与管理，基础功能如附件、分类模板、密码生成和密码口令生成、2FA代码储存和填写，除了无法自建和云端优先这两个小小缺憾，可称得上是该有的都有，后来居上，大有压1Password一头之势。VPN功能丰富，体验稳定，直连也不会捶胸顿足，IP比较脏，但也是在所难免。
+ 
+ 当时的我只是想找一个适合穷鬼、可以用IMAP/SMTP并且看起来不像随时要跑路的提供商，当然，如果不是大公司的产品，我会更乐意。找来找去，目光锁定了mailbox.org和posteo.de，这两家各有优劣，起价都便宜，前者的优势是有域名邮箱支持，后者定价是PAYG的模式，并且用户忘记按时付款只会暂停发信功能，不会暂停收信功能（我说这个不是教唆网友去薅羊毛，只是说假如我被车撞了在医院里躺了半年，不会因为错过缴费而失去这半年里发到我的地址的重要邮件）。后来用了一会，两家我都不太满意，mailbox的网页从我这里加载实在是太慢了，符合对德国网络的刻板印象；posteo是因为最后我还是更想用域名邮箱一点，但是他们家出于隐私保护不希望保存用户的域名信息。
+ 
+ 之所以最后还是用上了域名邮箱，是因为频繁地注册各类账号的我很需要一个别名服务，买不起SimpleLogin和Addy.io，琢磨自建的时候突然发现：不对啊，自建肯定需要一个域名，这整个域名都是我的，我还在这里装模作样地enable和disable做什么，直接开个catch-all，遇到垃圾就block，岂不美哉！而且，未来SimpleLogin或其它别名服务的域名可能为他人注册，或者挪作他用，但是只要我一直续费域名，域名就一直属于我，便宜又可靠。
+ 
+ 所以我最后靠上的邮箱解决方案是几个主要域名不开catch-all，几个次要域名开catch-all接收垃圾邮件（不发送的话直接用Cloudflare路由），买的是MXRoute家的不按邮箱个数计费只按容量计费的邮件托管服务，一年下来的域名钱和邮箱钱加起来只要15刀，花五分之一的钱享受比Mail Plus+SimpleLogin更自由的服务（这个数字还能腰斩，明年要放生一个.cc域名）。
+ 
+ 当然这个时候就有人要问了，有什么坏处吗？如有吧，比如MXRoute的老板不在瑞士，我的域名registrar也不在瑞士，Cloudflare也不在瑞士，但是我是穷鬼，穷鬼是不会追求这个的，反正本站也不在瑞士（本站的主机托管在风景不知道怎么样反正站长没去过的德国纽伦堡）……
+ 
+ 说完了服务端，该说客户端了。我没有试过所有风评“值得一试”的客户端，比如Claw Mail，我的体验很浅，仅仅是从Fedora换到Arch的时候试了一下，后来发现还是Thunderbird比较得劲。Thunderbird是一个成熟、面面俱到的开源客户端，赖舒服了就不想走，最大的特色大概是自动发现收发信服务器，安卓端的FairEmail用的也是tb的检索功能。不习惯Thunderbird，想要更简洁一点的Linux桌面用户可以尝试一下Evolution。FairEmail是我心目中的安卓最佳，尽管UI褒贬不一，但是功能肯定是最多的，对于默认不加载外部图像的邮件排版得非常好，一目了然，其他客户端往往都需要加载出图片才能看出邮件的内容。K-9无功无过，被Thunderbird合并后表现更加亮眼。eM Client，还没有试过。最近买了NameCrane的三年套餐，SmarterMail为每个顶级域送3个license，过段时间会试试看。
+ 
+ 至于各大邮件厂商自己的应用，网易邮箱大师的桌面端和移动端都一般般，校园邮薅的永久vip去广告版尚可一用，但是Thunderbird和FairEmail珠玉在前，只能说是食之无用，弃之可惜。QQ和foxmail也是一样。Tuta的邮件客户端倒是没有广告，不过搜索功能很垃圾，也不能导入/导出。
+ 
+ 未完待续，本期水完邮箱，下期水一下密码管理软件吧。
