--- a/source/_posts/2025-02-10-Logseq插件市场无法打开.md
+++ b/source/_posts/2025-02-10-Logseq插件市场无法打开.md
@@ -15,8 +15,12 @@ tags:
 ---
 
 
-首先看一下小猫咪在哪个端口运行，一般原版clash和mihomo party是7890，clash verge rev是7897.
+首先看一下小猫咪在哪个端口运行，一般原版clash和mihomo party是7890，clash verge rev是7897。
+
 把logseq的网络代理改为system 127.0.0.1:<小猫咪端口>
+
 有的人可能到这里就解决问题了。
+
 如果你解决不了，刚好又是Linux的话，可以继续看一下。
+
 我在看obsidian的git插件readme时忽然福至心灵，插件作者对Linux用户说[Flatpak is not recommended, because it doesn't have access to all system files.](https://github.com/Vinzent03/obsidian-git)我突然想到自己的Logseq也是flatpak，于是打开Logseq官网下了一个AppImage当对照组，果然AppImage可以连接插件市场，问题解决了。
