--- a/source/_posts/2025-03-09-2025.03.09更新.md
+++ b/source/_posts/2025-03-09-2025.03.09更新.md
@@ -15,6 +15,8 @@ img:
 ---
 
 
-- 站长在备考，这个月更新得比较少。
-- 准备把从今往后的博文从Typecho镜像到Hexo，Hexo网站托管在Codeberg Pages，暂时还没开发出Hexo的玩法，不过网站已经搭建起来了：https://hexo.obsp.de，欢迎访问（目前里面什么都没有）
-- Roadmap：买Servarica的大盘鸡，为读者提供Nextcloud免费服务~
+站长在备考，这个月更新得比较少。
+
+准备把从今往后的博文从Typecho镜像到Hexo，Hexo网站托管在Codeberg Pages，暂时还没开发出Hexo的玩法，不过网站已经搭建起来了：https://hexo.obsp.de，欢迎访问（目前里面什么都没有）
+
+Roadmap：买Servarica的大盘鸡，为读者提供Nextcloud免费服务~
